--- a/templates/base.html
+++ b/templates/base.html
@@ -80,7 +80,7 @@
                            <div><i class="fas fa-shopping-bag fa-lg"></i></div>
                            <p class="my-0">
                               {% if grand_total %}
-                                  ${{ grand total|floatformat:2 }}
+                                  ${{ grand_total|floatformat:2 }}
                               {% else %}
                                   $0.00
                               {% endif %}
